--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,6 +35,7 @@
         "@material-ui/core": "^1.2.3",
         "@material-ui/icons": "^1.1.0",
         "antd": "^3.6.3",
+        "bootstrap": "^4.3.1",
         "chart.js": "^2.7.2",
         "echarts": "^4.1.0",
         "file-loader": "^1.1.11",
@@ -43,6 +44,7 @@
         "moment": "^2.22.2",
         "prop-types": "15.6.2",
         "react": "^16.2.0",
+        "react-bootstrap": "^1.0.0-beta.9",
         "react-chartjs-2": "^2.7.2",
         "react-datepicker": "^1.5.0",
         "react-dom": "^16.2.0",
@@ -50,6 +52,7 @@
         "react-icons": "^2.2.7",
         "react-md": "1.3.3",
         "react-redux": "5.0.7",
+        "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "4.2.2",
         "react-star-rating-component": "^1.4.1",
         "redux": "^4.0.0",
