--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -51,6 +51,7 @@
         "react-echarts": "^0.1.1",
         "react-icons": "^2.2.7",
         "react-md": "1.3.3",
+        "react-native-md5": "^1.0.0",
         "react-redux": "5.0.7",
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "4.2.2",
