--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -38,7 +38,10 @@
         "bootstrap": "^4.3.1",
         "chart.js": "^2.7.2",
         "echarts": "^4.1.0",
+        "emailjs-com": "^2.3.2",
         "file-loader": "^1.1.11",
+        "jquery": "^3.4.1",
+        "lodash": "^4.17.14",
         "material-ui": "^1.0.0-beta.47",
         "material-ui-search-bar": "^1.0.0-beta.7",
         "moment": "^2.22.2",
