--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "emailjs-com": "^2.3.2",
     "express": "^4.16.2",
     "helmet": "^3.11.0",
     "jsonwebtoken": "^8.1.1",
