--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,6 +40,7 @@
         "echarts": "^4.1.0",
         "emailjs-com": "^2.3.2",
         "file-loader": "^1.1.11",
+        "images": "^3.0.2",
         "jquery": "^3.4.1",
         "lodash": "^4.17.14",
         "material-ui": "^1.0.0-beta.47",
@@ -53,6 +54,7 @@
         "react-dom": "^16.2.0",
         "react-echarts": "^0.1.1",
         "react-icons": "^2.2.7",
+        "react-image-file-resizer": "^0.2.0",
         "react-md": "1.3.3",
         "react-native-md5": "^1.0.0",
         "react-redux": "5.0.7",
