--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -60,6 +60,7 @@
         "react-image-file-resizer": "^0.2.0",
         "react-md": "1.3.3",
         "react-native-md5": "^1.0.0",
+        "react-paypal-button-v2": "^2.3.2",
         "react-redux": "5.0.7",
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "4.2.2",
