--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,18 @@ services:
   FrontEnd:
     build: ./Frontend
     image: maxiaolin/seba_find_my_cook_front_end:latest
-    container_name: frontEnd
+    container_name: seba_find_my_cook_front_end
+    command: npm start
     depends_on:
       - BackEnd
     ports:
-      - "8080:8080"
+      - "8081:8081"
+    volumes:
+    - '.:/usr/src/Frontend'
     restart: always
   mongodb:
     image: mongo:latest
-    container_name: "mongodb"
+    container_name: mongodb
     environment:
       - MONGO_DATA_DIR=/data/db
     volumes:
@@ -20,11 +23,14 @@ services:
         - "27017:27017"
   BackEnd:
     build: ./Backend
-    image: maxiaolion/seba_find_my_cook_back_end:latest
-    container_name: backEnd
+    image: maxiaolin/seba_find_my_cook_back_end:latest
+    container_name: seba_find_my_cook_back_end
     ports:
         - "3000:3000"
     depends_on:
         - mongodb
     environment:
         - mongodb_uri=mongodb://mongodb:27017/findmycook
+networks:
+  webappnetwork:
+    driver: bridge
