--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     environment:
       - MONGO_DATA_DIR=/data/db
     volumes:
-      - /data/db
+      - ./data/:/data/db
     ports:
         - "27017:27017"
   BackEnd:
